kubernetes/apps/forgejo/buildkit/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: buildkit
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: forgejo
          podSelector:
            matchLabels:
              app.kubernetes.io/managed-by: tekton-pipelines
      ports:
        - port: 1234
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: buildkit
  policyTypes:
    - Ingress
